Fix #411 address all PMD and Findbugs reports issues.